# fable-5-hunter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_de.md  SECURITY.md  START.bat  config.example.json  fable_hunter.py  llms.txt  pyproject.toml
.github/workflows/: ci.yml
install/: install_linux.sh  install_macos.sh  install_windows.ps1
locales/: de.json  en.json  es.json  ja.json  ru.json  zh.json
tests/: test_bug_regressions.py  test_hunter.py  test_linux_install.py
