[project]
name = "fable-5-hunter"
version = "1.0.0"
description = "Watches for Claude Fable 5 availability and notifies you the moment it is back."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Lukas Geiger", email = "lukasgeiger@googlemail.com" }
]
keywords = ["claude", "anthropic", "fable5", "model-watcher", "notification"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

# Zero runtime dependencies — stdlib only.
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/lukisch/fable-5-hunter"
Issues = "https://github.com/lukisch/fable-5-hunter/issues"

[project.scripts]
fable5-hunter = "fable_hunter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Single-module layout: fable_hunter.py at root + locales/ directory
include = [
    "fable_hunter.py",
    "locales/*.json",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "SIM105"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
strict = false
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
show_error_codes = true
ignore_missing_imports = true
